--- a/test/interpolation/Makefile
+++ b/test/interpolation/Makefile
@@ -1,3 +1,3 @@
 run:
-	@g++ -DUSE_HERMITE -o 1 main.cpp ../../lib/lpf_sallenkey_onepole.cpp ../../lib/resampler.cpp 
+	@g++ -DUSE_HERMITE -o 1 main.cpp ../../lib/lpf_biquad.cpp ../../lib/resampler.cpp 
 	@./1 | python3 run.py
