--- a/rp2040/CMakeLists.txt
+++ b/rp2040/CMakeLists.txt
@@ -9,7 +9,7 @@ include(pico_extras_import.cmake)
 
 
 # Set name of project (as PROJECT_NAME) and C/C++ standards
-project(yoctocore C CXX ASM)
+project(ouroboros C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -26,6 +26,8 @@ add_executable(${PROJECT_NAME}
 )
 
 
+pico_generate_pio_header(ouroboros ${CMAKE_CURRENT_LIST_DIR}/lib/WS2812.pio)
+
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
 
@@ -33,8 +35,14 @@ pico_add_extra_outputs(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME} 
     pico_stdlib
     hardware_i2c
+    hardware_pio
 )
 
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    WS2812_PIN=22
+    WS2812_SM=2
+    WS2812_NUM_LEDS=40
+)
 # target_compile_options(command_line PUBLIC -Wall -Wextra -Wno-unused-function -Wno-unused-parameter)
 # target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra -Wno-unused-parameter)
 
