--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,4 +59,4 @@ jobs:
       run: echo "PICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk" >> $GITHUB_ENV
     - name: Build ouroboros-control
       run:
-        cd rp2040 && make -j
+        cd rp2040 && make 
