--- a/rp2040/CMakeLists.txt
+++ b/rp2040/CMakeLists.txt
@@ -23,9 +23,9 @@ pico_sdk_init()
 add_executable(${PROJECT_NAME} 
     main.c
     ${CMAKE_CURRENT_LIST_DIR}/lib/i2c_slave.c
-    ${CMAKE_CURRENT_LIST_DIR}/lib/adsr.c
+    ${CMAKE_CURRENT_LIST_DIR}/lib/adenv.c
+    ${CMAKE_CURRENT_LIST_DIR}/lib/usb_descriptors.c
 )
-
 
 pico_generate_pio_header(ouroboros ${CMAKE_CURRENT_LIST_DIR}/lib/WS2812.pio)
 pico_generate_pio_header(ouroboros ${CMAKE_CURRENT_LIST_DIR}/lib/quadrature_encoder.pio)
@@ -39,7 +39,10 @@ target_link_libraries(${PROJECT_NAME}
     pico_multicore
     hardware_i2c
     hardware_pio
+    hardware_uart
     hardware_adc
+    tinyusb_device
+    tinyusb_board
 )
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
@@ -51,19 +54,25 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
     PIN_I2C1_SDA=2
     PIN_I2C1_SCL=3
     RP2040_I2C_ADDRESS=0x28
+    INCLUDE_MIDI=1
 )
-# target_compile_options(command_line PUBLIC -Wall -Wextra -Wno-unused-function -Wno-unused-parameter)
-# target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra -Wno-unused-parameter)
 
-# This program is useless without standard standard input and output.
-# add_compile_definitions(USE_PRINTF USE_DBG_PRINTF)
 add_compile_definitions(USE_PRINTF)
 
 set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS "-Wl,--print-memory-usage")
 
-# uncomment these lines to have normal USB
-pico_enable_stdio_usb(${PROJECT_NAME} 1)
+target_link_libraries(${PROJECT_NAME} 
+    tinyusb_device
+    tinyusb_board
+)
+pico_enable_stdio_usb(${PROJECT_NAME} 0)
 pico_enable_stdio_uart(${PROJECT_NAME} 1)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+
+
+# # uncomment these lines to have normal USB
+# pico_enable_stdio_usb(${PROJECT_NAME} 1)
+# pico_enable_stdio_uart(${PROJECT_NAME} 1)
 
 
 pico_add_extra_outputs(${PROJECT_NAME})
